# tevec

./: .gitignore  Cargo.toml  LICENSE  Makefile  README-CN.md  README.md  rust-toolchain.toml
.github/workflows/: build.yml  rust.yml
src/: agg.rs  data_traits.rs  lib.rs  prelude.rs
src/backends_impl/: ndarray_rs.rs  vec.rs
src/vec_core/: iter.rs  iter_valid.rs  mod.rs  trusted.rs
src/vec_core/backends_impl/: mod.rs  ndarray_rs.rs
tea-agg/: CHANGELOG.md  Cargo.toml
tea-agg/src/: lib.rs  vec_valid.rs
tea-core/: CHANGELOG.md  Cargo.toml
tea-core/benches/: agg.rs  rolling_custom.rs
tea-core/src/: agg.rs  create.rs  export.rs  lib.rs  linspace.rs  prelude.rs  testing.rs  utils.rs
tea-core/src/backends_impl/: arc.rs  mod.rs  ndarray.rs  ndarray_rs.rs  pl_type_map.rs  polars.rs  vec.rs  vecdeque.rs
tea-core/src/backends_impl/polars/: decimal.rs  mod.rs  string.rs  temporal.rs
tea-core/src/vec_core/: element.rs  getlen.rs  iter.rs  iter_traits.rs  mod.rs  trusted.rs  uninit.rs
tea-core/src/vec_core/cores/: mod.rs  own.rs  view.rs  view_mut.rs
tea-deps/: Cargo.toml
tea-deps/src/: lib.rs
tea-dtype/: CHANGELOG.md  Cargo.toml
tea-dtype/src/: bool_type.rs  cast.rs  datatype.rs  export.rs  isnone.rs  lib.rs  number.rs  polars_cast.rs
tea-dyn/: Cargo.toml
tea-dyn/src/: lib.rs
tea-dyn/src/backends_impl/: mod.rs  polars.rs
tea-error/: CHANGELOG.md  Cargo.toml
tea-error/src/: lib.rs
tea-ffi/: Cargo.toml  build.rs
tea-ffi/src/: lib.rs
tea-ffi/src/include/special/: binom.h
tea-lazy/: Cargo.toml
tea-lazy/src/: data.rs  expr.rs  lib.rs  node.rs
tea-lazy/src/methods/: map.rs
tea-macros/: CHANGELOG.md  Cargo.toml
tea-macros/src/: lib.rs  match_enum.rs
tea-map/: CHANGELOG.md  Cargo.toml
tea-map/src/: lib.rs  valid_iter.rs  vec_map.rs
tea-rolling/: CHANGELOG.md  Cargo.toml
tea-rolling/benches/: rolling.rs
tea-rolling/src/: base.rs  binary.rs  cmp.rs  feature.rs  features.rs  lib.rs  norm.rs  reg.rs
tea-rolling/src/dynamic/: feature.rs  mod.rs  norm.rs  reg.rs
tea-time/: CHANGELOG.md  Cargo.toml
tea-time/src/: convert.rs  datetime.rs  lib.rs  time.rs  timedelta.rs  timeunit.rs
tea-time/src/impls/: impl_datetime.rs  impl_ops.rs  impl_polars.rs  impl_time.rs  impl_timedelta.rs  mod.rs
tea-vec/: Cargo.toml
tea-vec/src/: agg.rs  lib.rs  prelude.rs
tea-vec/src/vec_core/: iter_valid.rs  trusted.rs
tears/src/: lib.rs  prelude.rs
tevec/: CHANGELOG.md  Cargo.toml  build.rs
tevec/benches/: fdiff.rs  linspace.rs
tevec/src/: agg.rs  export.rs  ffi.rs  lib.rs  map.rs  prelude.rs  rolling.rs
tevec/src/dynamic/: macros.rs  mod.rs
tevec/src/dynamic/methods/: map.rs  mod.rs
tevec/src/dynamic/structs/: array.rs  mod.rs  scalar.rs  trust_iter.rs  vec.rs
tevec/src/special_func/: beta.rs  binom.rs  mod.rs
