[workspace]
resolver = "2"
members = [
    "tevec",
    "tea-core",
    "tea-dtype",
    "tea-agg",
    "tea-map",
    "tea-rolling",
    "tea-macros",
    "tea-error",
    # "tea-ffi",
]
exclude = ["tea-ffi"]

[workspace.package]
version = "0.2.7"
authors = ["Teamon"]
edition = "2021"
repository = "https://github.com/Teamon9161/tevec"
license = "MIT"

[profile.release]
lto = true

[workspace.dependencies]
num-traits = "0.2"
anyhow = "1"
thiserror = "1"

tea-core = { version = "0.2.7", path = "./tea-core", default-features = false }
tea-dtype = { version = "0.2.7", path = "./tea-dtype", default-features = false }
tea-error = { version = "0.2.7", path = "./tea-error" }
tea-time = { version = "0.2.7", path = "./tea-time" }
tea-macros = { version = "0.2.7", path = "./tea-macros" }
tea-agg = { version = "0.2.7", path = "./tea-agg" }
tea-map = { version = "0.2.7", path = "./tea-map" }
tea-rolling = { version = "0.2.7", path = "./tea-rolling" }

[profile.dev]
incremental = true
