[workspace]
resolver = "3"
members = [
    "tevec",
    "tea-core",
    "tea-dtype",
    "tea-agg",
    "tea-map",
    "tea-rolling",
    "tea-macros",
    "tea-error",
    "tea-deps",
    "tea-dyn",
]
exclude = ["tea-ffi"]

[workspace.package]
version = "0.6.1"
authors = ["Teamon"]
edition = "2024"
repository = "https://github.com/Teamon9161/tevec"
license = "MIT"

[profile.release]
lto = true

[workspace.dependencies]
num-traits = "0.2"

tea-deps = { version = "0.6.1", path = "./tea-deps", default-features = false }
tea-core = { version = "0.6.1", path = "./tea-core", default-features = false }
tea-dtype = { version = "0.6.1", path = "./tea-dtype", default-features = false }
tea-error = { version = "0.6.1", path = "./tea-error" }
tea-time = { version = "0.6.1", path = "./tea-time" }
tea-macros = { version = "0.6.1", path = "./tea-macros" }
tea-agg = { version = "0.6.1", path = "./tea-agg" }
tea-map = { version = "0.6.1", path = "./tea-map" }
tea-rolling = { version = "0.6.1", path = "./tea-rolling" }
tea-dyn = { version = "0.6.1", path = "./tea-dyn" }

[profile.dev]
incremental = true
