[package]
name = "tea-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Core data structures and traits for tevec."

[features]
default = []
# default = ["ndarray", "time", "polars"]

vecdeque = []
ndarray = ["dep:ndarray"]
polars = ["dep:polars"]
time = ["tea-dtype/time", "polars?/dtype-datetime", "polars?/dtype-duration"]
serde = ["tea-dtype/serde"]

[dependencies]
num-traits = { workspace = true }
tea-error = { workspace = true }
tea-dtype = { workspace = true, default-features = false }
serde = "1.0"
ndarray = { version = ">=0.15, <0.17", optional = true, features = ["rayon"] }
polars = { version = ">=0.37, <0.43", optional = true, default-features = false, features = [
    "dtype-struct",
] }

[dev-dependencies]
criterion = "0.5"


# [[bench]]
# name = "agg"
# harness = false

[[bench]]
name = "rolling_custom"
harness = false
