[package]
name = "tea-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Core data structures and traits for tevec."

[features]
default = []
# default = ["ndarray", "time", "polars"]

vecdeque = []
ndarray = ["tea-deps/ndarray"]
polars = ["tea-deps/polars", "tea-dtype/polars"]
polars-lazy = ["tea-deps/polars-lazy", "tea-dtype/polars-lazy"]
time = ["tea-dtype/time", "tea-deps/time"]
serde = ["tea-dtype/serde"]

[dependencies]
num-traits = { workspace = true }
tea-error = { workspace = true }
tea-dtype = { workspace = true, default-features = false }
tea-deps = { workspace = true, default-features = false }
serde = "1.0"

[dev-dependencies]
criterion = "0.5"


[[bench]]
name = "agg"
harness = false

[[bench]]
name = "rolling_custom"
harness = false
