[package]
name = "tea-deps"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Dependencies for the tevec ecosystem"

[features]
default = []
ndarray = ["dep:ndarray"]
polars = ["dep:polars", "dep:polars-arrow"]
polars-lazy = ["polars", "polars/lazy"]
polars-struct = ["polars", "polars/dtype-struct"]
time = [
    "polars?/dtype-datetime",
    "polars?/dtype-duration",
    "polars?/temporal",
    "dep:chrono",
]


[dependencies]
ndarray = { version = ">=0.15, <0.17", optional = true, features = ["rayon"] }
polars = { version = ">=0.44, <0.49", optional = true, default-features = false }
polars-arrow = { version = ">=0.44, <0.49", optional = true, default-features = false }
chrono = { version = "0.4", optional = true }
