[package]
name = "tea-dtype"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "A library to provide datatype and useful traits for datatype"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["time"]

time = ["tea-time", "tea-deps/time"]
serde = ["tea-time?/serde"]
polars = ["tea-time?/polars", "tea-deps/polars"]
polars-lazy = ["polars", "tea-time?/polars-lazy", "tea-deps/polars-lazy"]

[dependencies]
tea-deps = { workspace = true, default-features = false }
tea-time = { workspace = true, optional = true }
num-traits = { workspace = true }
