[package]
name = "tea-error"
description = "A library for creating custom errors for tevec"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
polars = { version = "0.41.3", optional = true, default-features = false }
