[package]
name = "tea-error"
description = "A library for creating custom errors for tevec"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
polars = ["tea-deps/polars"]

[dependencies]
tea-deps = { workspace = true, default-features = false }
thiserror = { version = "1", default-features = false }
