[package]
name = "tea-lazy"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["map"]
map = ["tevec/map"]

[dependencies]
derive_more = { version = "0.99", default-features = false, features = [
    "from",
] }
tevec = { path = "../tevec", default-features = false, features = ["dyn"] }
