[package]
name = "tea-map"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Map functions for tevec"

[dependencies]
tea-core = { workspace = true, default-features = false }
# anyhow = { workspace = true }
num-traits = { workspace = true }
itertools = "0.13"
