[package]
name = "tea-rolling"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Rolling functions for tevec"

[features]
default = []

[dependencies]
tea-core = { path = "../tea-core", default-features = false, features = [
    # "ndarray",
] }
ndarray = { version = "0.15.6", optional = true }
tea-macros = { path = "../tea-macros" }
num-traits = { workspace = true }
