[package]
name = "tea-rolling"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Rolling functions for tevec"

[features]
default = []
ndarray = ["tea-core/ndarray"]

[dependencies]
tea-core = { workspace = true, default-features = false }
tea-macros = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
criterion = "0.5"


[[bench]]
name = "rolling"
harness = false
