[package]
name = "tea-time"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Time related dtypes for tevec"

[features]
default = []
serde = ["dep:serde", "chrono/serde", "serde_with"]
polars = ["tea-deps/polars"]
polars-lazy = ["polars", "tea-deps/polars-lazy"]

[dependencies]
chrono = "0.4.37"
tea-deps = { workspace = true, default-features = false, features = ["time"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_with = { version = "3", optional = true, features = ["chrono"] }
tea-error = { workspace = true }
