[package]
name = "tea-vec"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["nd_array"]
nd_array = ["ndarray"]

[dependencies]
num-traits = {workspace = true}
tea-dtype = {path="../tea-dtype", default_features = false}
serde = "1.0"
ndarray = {version="0.15.6", optional = true}