[package]
name = "tevec"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "A crate to provide quantitative analysis functions for vec | ndarray | polars backend."

[features]
default = ["time", "agg", "map", "rolling", "fdiff"]
# default = ["time", "rolling", "agg", "map", "stat", "ndarray", "polars"]

# ops
rolling = ["tea-rolling"]
map = ["tea-map"]
agg = ["tea-agg"]
stat = ["statrs", "ffi"]
fdiff = ["stat", "rolling"]

# backends
polars = ["tea-core/polars"]
ndarray = ["tea-core/ndarray"]

# dtype
time = ["tea-dtype/time", "tea-core/time"]

# serde
serde = ["tea-core/serde"]

[dependencies]
statrs = { version = "0.17", optional = true }
tea-dtype = { workspace = true, default-features = false }
tea-core = { workspace = true, default-features = false }
tea-macros = { workspace = true }
tea-rolling = { workspace = true, optional = true }
tea-map = { workspace = true, optional = true }
tea-agg = { workspace = true, optional = true }
ffi = { version = "0.1", default-features = false, optional = true, package = "tea-ffi" }
derive_more = { version = "1", default-features = false, features = ["from"] }


[dev-dependencies]
criterion = "0.5"


[[bench]]
name = "linspace"
harness = false

[[bench]]
name = "fdiff"
harness = false
required-features = ["fdiff"]
